# skullydoo

./: CMakeLists.txt
src/: CMakeLists.txt
src/common/: Config.cpp  Config.h  ImageModel.cpp  ImageModel.h  Object.cpp  Object.h  SmartPointer.h  SurfaceModel.cpp  SurfaceModel.h  Types.h  VoxelModel.cpp  VoxelModel.h  WeakPointer.h
src/gui/: AboutGUI.cpp  AboutGUI.h  AboutGUIBase.fl  DesktopGUI.cpp  DesktopGUI.h  DesktopGUIBase.fl  DicomBrowserGUI.cpp  DicomBrowserGUI.h  DicomBrowserGUIBase.fl  Interactor.cpp  Interactor.h  MetricsGUI.cpp  MetricsGUI.h  MetricsGUIBase.fl  ProgressWindowGUI.cpp  ProgressWindowGUI.h  ProgressWindowGUIBase.fl  TCLFilterConfigGUI.cpp  TCLFilterConfigGUI.h  TCLFilterConfigGUIBase.fl  TCLFilterPipelineConfigGUI.cpp  TCLFilterPipelineConfigGUI.h  TCLFilterPipelineConfigGUIBase.fl  VolumeLoaderGUI.cpp  VolumeLoaderGUI.h  VolumeLoaderGUIBase.fl  VtkInteractorAdaptor.cpp  VtkInteractorAdaptor.h  vtkFlRenderWindowInteractor.cxx  vtkFlRenderWindowInteractor.h
src/gui/images/: skull.xpm
src/io/: SURFormatIO.cpp  SURFormatIO.h
src/main/: Application.cpp  Application.h
src/pipeline/: ImageSegment.cpp  ImageSegment.h  ItkVtk.cpp  ItkVtk.h  Pipeline.cpp  Pipeline.h  PipelineSegment.cpp  PipelineSegment.h  SurfaceSegment.cpp  SurfaceSegment.h  VtkItk.cpp  VtkItk.h
src/segmentation/: Segmentation.cpp  Segmentation.h  SegmentationMethod.cpp  SegmentationMethod.h
src/segmentation/activecontour/: ActiveContourMethod.cpp  ActiveContourMethod.h  ActiveContourSegmentation.cpp  ActiveContourSegmentation.h
src/segmentation/fastmarching/: FastMarchingMethod.cpp  FastMarchingMethod.h  FastMarchingSegmentation.cpp  FastMarchingSegmentation.h
src/segmentation/topologicalderivative/: TDMethod.cpp  TDMethod.h  TDSegmentation.cpp  TDSegmentation.h
src/segmentation/voxelgrow/: FlatContour.cpp  FlatContour.h  GradientGrowth.cpp  GradientGrowth.h  GradientProcessor.cpp  GradientProcessor.h  Healer.cpp  Healer.h  NeighborDeltaProcessor.cpp  NeighborDeltaProcessor.h  SeedDeltaProcessor.cpp  SeedDeltaProcessor.h  VoxelGrow.cpp  VoxelGrow.h  VoxelGrowSegmentation.cpp  VoxelGrowSegmentation.h  VoxelProcessor.cpp  VoxelProcessor.h
src/tcl/: GradientGrowthFilter.cpp  GradientGrowthFilter.h  TCL.cpp  TCL.h  TCLFilter.cpp  TCLFilter.h  TCLFilterContinuousParameter.cpp  TCLFilterContinuousParameter.h  TCLFilterDiscreteParameter.cpp  TCLFilterDiscreteParameter.h  TCLFilterParameter.cpp  TCLFilterParameter.h  TCLFilterPipeline.cpp  TCLFilterPipeline.h  TCLFilterStringParameter.cpp  TCLFilterStringParameter.h  TCLFilterUtils.cpp  TCLFilterUtils.h  TCLGlobals.cpp  TCLGlobals.h  TCLImageToImageFilterPipeline.cpp  TCLImageToImageFilterPipeline.h  TCLNativeFilter.cpp  TCLNativeFilter.h  TCLPolyDataToPolyDataFilterPipeline.cpp  TCLPolyDataToPolyDataFilterPipeline.h
src/tinyxml/: CMakeLists.txt
src/win32/: Skully-Doo.rc  resource.h
